# GSS

./: .env.example  .gitignore  BLOCKER_SUBTASK_1_3.md  CLAUDE.md  CONDA_SETUP_INSTRUCTIONS.md  MANUAL_STEPS_REQUIRED.md  Makefile  PYTORCH_FIX_GUIDE.md  README.md  README_CONDA_SETUP.txt  TODO.md  build-progress.txt  context.json  create_conda_env.bat  create_conda_env.sh  daemon_status.json  diagnose_torch_dlls.py  environment.yml  environment_conda_pytorch.yml  environment_cpu_pytorch.yml  fix_pytorch_conda.bat  fix_pytorch_conda.sh  fix_pytorch_cpu.bat  fix_pytorch_cpu.sh  install_gss_editable.sh  project_index.json  pyproject.toml  test_all_imports.py  test_imports_simple.py  test_minimal_imports.py  verification_summary.txt  verify_cuda_availability.bat  verify_cuda_availability.sh  verify_gsplat.py  verify_matplotlib.bat  verify_matplotlib.sh  verify_pytorch.bat  verify_pytorch.sh  verify_tests.bat  verify_tests.sh
.claude/: settings.local.json
configs/: pipeline.yaml  pipeline_exterior.yaml  pipeline_import.yaml  pipeline_planargs.yaml
docs/: 3dgs_to_bim_master_plan.md  input_compatibility.md  research_papers.md
scripts/: _build_diffplane.bat  _build_gdino.bat  _build_gdino2.bat  _build_groundedsam.bat  _build_planargs_cuda.bat  _build_pytorch3d.bat  _check_dims.py  _test_planargs_step.py  _test_s06b.py  _test_s06b_pipeline.py  _verify_planargs.py  compare_3dgs_vs_bim.py  convert_replica.py  create_test_video.py  download_sample_data.py  run_full_pipeline.py  run_with_msvc.bat  setup_env.sh  setup_planargs_env.bat  test_full_pipeline.py  visualize_all_runs.py  (+12 more)
(+149 files in other folders)
