[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gss"
version = "0.1.0"
description = "3D Gaussian Splatting to BIM (IFC) automatic conversion pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",

    # Phase 0-1: Video / SfM
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scipy>=1.11",

    # Phase 1: 3DGS (gsplat + torch are installed separately due to CUDA)
    # pip install torch --index-url https://download.pytorch.org/whl/cu121
    # pip install gsplat

    # Phase 1: TSDF
    "open3d>=0.17",

    # Phase 2: Plane/Boundary
    "alphashape>=1.3",
    "shapely>=2.0",

    # Phase 3: IFC
    "ifcopenshell>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
gpu = [
    # Install manually:
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
    # pip install gsplat
]

[project.scripts]
gss = "gss.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gss"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end pipeline tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
